# rust-paytr

./: .gitignore  Cargo.toml  README.md
example/: Cargo.toml
example/src/: handlers.rs  main.rs  structs.rs
examples/axum_example/: .env.example  Cargo.toml
examples/axum_example/src/: main.rs
examples/thunder/: .env.example  Cargo.toml
examples/thunder/src/: main.rs
src/paytr/: lib.rs  structs.rs
src/paytr/methods/: methods.rs
src/paytr/structs/: structs.rs
