[package]
name = "example"
version = "0.1.0"
edition = "2024"

[dependencies]
thunder-rs = {path = "./thunder-rs"}
serde = {version = "1.0.218", features = ["derive"]}
serde_json = "1.0.139"
hyper = "1.3.1"
base64 = "0.22.1"
hmac = "0.12.1"
itoa = "1.0.14"
reqwest = {version = "0.12.12", features = ["blocking", "json"]}
serde_urlencoded = "0.7.1"
sha2 = "0.10.8"
tokio = "1.44.1"
dotenv = "0.15.0"


[lib]
name = "paytr"
path = "../src/paytr/lib.rs"
