[package]
name = "thunder"
version = "0.1.0"
edition = "2024"

[dependencies]
hyper = "1.6.0"
tokio = { version = "1.44.1", features = ["full"] }
thunder-rs = { path = "./thunder-rs" }
dotenv = "0.15.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
base64 = "0.22.1"
hmac = "0.12.1"
itoa = "1.0.14"
reqwest = {version = "0.12.12", features = ["blocking", "json"]}
serde_urlencoded = "0.7.1"
sha2 = "0.10.8"




[lib]
name="paytr"
path="../../src/paytr/lib.rs"
